# object-recognizer

./: .cproject  .project  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  eval  eval.cpp  extractor.cpp  train  train.cpp  trainer_snapshot.xml
includes/: Makefile  cmake_install.cmake  extractor.h
src/: CMakeLists.txt  eval.cpp  extractor.cpp  train.cpp
xml/: clusters_snapshot.xml
