PROJECT( surf )
FIND_PACKAGE( OpenCV REQUIRED )
FIND_PACKAGE(Boost COMPONENTS filesystem system REQUIRED)
include_directories("/home/tbuchy/surf/includes")
set(CMAKE_CXX_FLAGS "-g -Wall")

IF (Boost_FOUND)
    INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIR})
    ADD_DEFINITIONS( "-DHAS_BOOST" )
ENDIF()
ADD_EXECUTABLE( train train.cpp extractor.cpp )
TARGET_LINK_LIBRARIES( train ${OpenCV_LIBS} ${BOOST_LIBRARIES} ${Boost_SYSTEM_LIBRARY} ${Boost_FILESYSTEM_LIBRARY} )
ADD_EXECUTABLE( eval eval.cpp extractor.cpp )
TARGET_LINK_LIBRARIES( eval ${OpenCV_LIBS} ${BOOST_LIBRARIES} ${Boost_SYSTEM_LIBRARY} ${Boost_FILESYSTEM_LIBRARY} )

