SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/bin)

ADD_EXECUTABLE( train train.cpp extractor.cpp )
TARGET_LINK_LIBRARIES( train ${OpenCV_LIBS} ${BOOST_LIBRARIES} ${Boost_SYSTEM_LIBRARY} ${Boost_FILESYSTEM_LIBRARY} )
ADD_EXECUTABLE( eval eval.cpp extractor.cpp )
TARGET_LINK_LIBRARIES( eval ${OpenCV_LIBS} ${BOOST_LIBRARIES} ${Boost_SYSTEM_LIBRARY} ${Boost_FILESYSTEM_LIBRARY} )